# PointGrey_CaptureROS

./: .gitignore  CMakeLists.txt  README.md  README.md~  left.yaml  package.xml  right.yaml
cfg/: long_camera_left.yaml  long_camera_right.yaml
include/: flea3Driver.h  stereoCam.h  stereoCam.h~
launch/: capture.launch  capture.launch~  capture_long.launch  capture_wide.launch  experiment.launch  experiment.launch~  rosbag_capture.launch  rosbag_long.launch  rosbag_wide.launch
src/: flea3Driver.cpp  main.cpp  stereoCam.cpp
